// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<RoomListItemNotificationMenu /> stories > renders AllMessagesLoud story 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    style="padding: 16px;"
  >
    <button
      aria-controls="radix-_r_1b_"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Notification options"
      aria-labelledby="_r_1c_"
      class="_icon-button_1215g_8"
      data-kind="primary"
      data-state="open"
      id="radix-_r_1a_"
      role="button"
      style="--cpd-icon-button-size: 24px;"
      tabindex="0"
      type="button"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.293 17.293c.63.63.184 1.707-.707 1.707H4.414c-.89 0-1.337-1.077-.707-1.707L5 16v-6s0-7 7-7 7 7 7 7v6zM12 22a2 2 0 0 1-2-2h4a2 2 0 0 1-2 2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`<RoomListItemNotificationMenu /> stories > renders Default story (closed, unmuted) 1`] = `
<div>
  <div
    style="padding: 16px;"
  >
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Notification options"
      aria-labelledby="_r_2_"
      class="_icon-button_1215g_8"
      data-kind="primary"
      data-state="closed"
      id="radix-_r_0_"
      role="button"
      style="--cpd-icon-button-size: 24px;"
      tabindex="0"
      type="button"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.293 17.293c.63.63.184 1.707-.707 1.707H4.414c-.89 0-1.337-1.077-.707-1.707L5 16v-6s0-7 7-7 7 7 7 7v6zM12 22a2 2 0 0 1-2-2h4a2 2 0 0 1-2 2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`<RoomListItemNotificationMenu /> stories > renders MentionsOnly story 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    style="padding: 16px;"
  >
    <button
      aria-controls="radix-_r_1o_"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Notification options"
      aria-labelledby="_r_1p_"
      class="_icon-button_1215g_8"
      data-kind="primary"
      data-state="open"
      id="radix-_r_1n_"
      role="button"
      style="--cpd-icon-button-size: 24px;"
      tabindex="0"
      type="button"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.293 17.293c.63.63.184 1.707-.707 1.707H4.414c-.89 0-1.337-1.077-.707-1.707L5 16v-6s0-7 7-7 7 7 7 7v6zM12 22a2 2 0 0 1-2-2h4a2 2 0 0 1-2 2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`<RoomListItemNotificationMenu /> stories > renders Muted story (closed, muted icon) 1`] = `
<div>
  <div
    style="padding: 16px;"
  >
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Notification options"
      aria-labelledby="_r_a_"
      class="_icon-button_1215g_8"
      data-kind="primary"
      data-state="closed"
      id="radix-_r_8_"
      role="button"
      style="--cpd-icon-button-size: 24px;"
      tabindex="0"
      type="button"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m4.917 2.083 17 17a1 1 0 0 1-1.414 1.414L19.006 19H4.414c-.89 0-1.337-1.077-.707-1.707L5 16v-6s0-2.034 1.096-3.91L3.504 3.498a1 1 0 0 1 1.414-1.414M19 13.35 9.136 3.484C9.93 3.181 10.874 3 12 3c7 0 7 7 7 7z"
          />
          <path
            d="M10 20h4a2 2 0 0 1-4 0"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`<RoomListItemNotificationMenu /> stories > renders Open story 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    style="padding: 16px;"
  >
    <button
      aria-controls="radix-_r_h_"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Notification options"
      aria-labelledby="_r_i_"
      class="_icon-button_1215g_8"
      data-kind="primary"
      data-state="open"
      id="radix-_r_g_"
      role="button"
      style="--cpd-icon-button-size: 24px;"
      tabindex="0"
      type="button"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.293 17.293c.63.63.184 1.707-.707 1.707H4.414c-.89 0-1.337-1.077-.707-1.707L5 16v-6s0-7 7-7 7 7 7 7v6zM12 22a2 2 0 0 1-2-2h4a2 2 0 0 1-2 2"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`<RoomListItemNotificationMenu /> stories > renders OpenMuted story 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    style="padding: 16px;"
  >
    <button
      aria-controls="radix-_r_u_"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="Notification options"
      aria-labelledby="_r_v_"
      class="_icon-button_1215g_8"
      data-kind="primary"
      data-state="open"
      id="radix-_r_t_"
      role="button"
      style="--cpd-icon-button-size: 24px;"
      tabindex="0"
      type="button"
    >
      <div
        class="_indicator-icon_147l5_17"
        style="--cpd-icon-button-size: 100%;"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m4.917 2.083 17 17a1 1 0 0 1-1.414 1.414L19.006 19H4.414c-.89 0-1.337-1.077-.707-1.707L5 16v-6s0-2.034 1.096-3.91L3.504 3.498a1 1 0 0 1 1.414-1.414M19 13.35 9.136 3.484C9.93 3.181 10.874 3 12 3c7 0 7 7 7 7z"
          />
          <path
            d="M10 20h4a2 2 0 0 1-4 0"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;
